creando interfaz de bachillerato parte 1

--- a/web/index.html
+++ b/web/index.html
@@ -37,8 +37,8 @@ and open the template in the editor.
             <form method="get" action="">
                 
               <input type="submit" name="btnEstu" value="Estudiante">
-                 <input type="submit" name="btnBachi" value="Bachillerato">
-
+              <a href="Bachillerato.jsp" name="btnBachillerato">Bachillerato</a>
+               <!<!-- <input type="submit" name="btnBachi" value="Bachillerato"> -->
              </form>
         </div>
 
