--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,8 @@ and open the template in the editor.
        
             <form method="get" action="">
                 
-              <input type="submit" name="btnEstu" value="Estudiante">
+               <a href="Estudiante.jsp" name="btnEstudiante">Estudiante</a>
+  
               <a href="Bachillerato.jsp" name="btnBachillerato">Bachillerato</a>
              </form>
         </div>
