finalizacion de fondo etc

--- a/web/index.html
+++ b/web/index.html
@@ -36,9 +36,9 @@ and open the template in the editor.
        
             <form method="get" action="">
                 
-               <a href="Estudiante.jsp" name="btnEstudiante">Estudiante</a>
+               <a class="button" href="Estudiante.jsp" name="btnEstudiante">Estudiante</a>
   
-              <a href="Bachillerato.jsp" name="btnBachillerato">Bachillerato</a>
+              <a  class="button" href="Bachillerato.jsp" name="btnBachillerato">Bachillerato</a>
              </form>
         </div>
 
